# permutect

./: .gitignore  Dockerfile  LICENSE  docker_command.sh  pixi.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
comparisons/: make_seqc2_data_table.py
paper/: Permutect.tex
permutect/: constants.py  misc_utils.py  parameters.py
permutect/architecture/: adversarial.py  artifact_model.py  calibration.py  dna_sequence_convolution.py  euclidean_transformation.py  exponentially_modified_gaussian.py  feature_clustering.py  gated_mlp.py  mlp.py  monotonic.py  parameterizations.py  posterior_model.py  posterior_model_priors.py  set_pooling.py
permutect/architecture/gradient_reversal/: functional.py  module.py
permutect/architecture/sam/: sam.py
permutect/architecture/spectra/: artifact_spectra.py  normal_artifact_spectrum.py  overdispersed_binomial_mixture.py  posterior_model_spectra.py  somatic_spectrum.py
permutect/data/: batch.py  count_binning.py  datum.py  memory_mapped_data.py  memory_mapped_posterior_data.py  plain_text_data.py  posterior_data.py  posterior_dataset.py  prefetch_generator.py  reads_batch.py  reads_dataset.py  reads_datum.py
permutect/metrics/: evaluation_metrics.py  loss_metrics.py  plotting.py  posterior_result.py
permutect/sets/: ragged_sets.py
permutect/test/: test_file_names.py
permutect/test/architecture/: test_artifact_model.py  test_dna_sequence_convolution.py  test_downsampler.py  test_mlp.py  test_monotonic.py  test_overdispersed_binomial_mixture.py
permutect/test/data/: test_reads_batch.py  test_reads_dataset.py  test_reads_datum.py
permutect/test/test_utils/: artificial_data.py
permutect/test/tools/: conftest.py  test_filter_variants.py  test_pipeline.py  test_preprocess_dataset.py  test_prune_dataset.py  test_refine_permutect_model.py  test_train_permutect_model.py
permutect/test/utils/: test_array_utils.py  test_math_utils.py  test_stats_utils.py
permutect/tools/: edit_dataset.py  filter_variants.py  preprocess_dataset.py  prune_dataset.py  refine_artifact_model.py  train_artifact_model.py
permutect/training/: balancer.py  checkpoint.py  downsampler.py  loss_recorder.py  model_training.py  training_losses.py
permutect/utils/: allele_utils.py  array_utils.py  enums.py  math_utils.py  stats_utils.py
scripts/: concatenate.wdl  make_training_dataset.wdl  permutect.wdl  pre-commit  refine_artifact_model.wdl
terra-data-tables/: make-hiseq-snapshot-data-table.sh  make-novaseq-snapshot-data-table.sh  make-twist-pon-data-table.sh
